# pull-aps-feed

./: .gitignore  README.md  aps-feed-input.yml  aps-feed.py  physics-journals-feed.py  physics-journals-input.yml  pyproject.toml
Results/: _sample.md
aps_feed/: __init__.py  config.py  explanation.md  main.py  processors.py  utils.py
physics_journals_feed/: config.py  main.py  models.py  output.py
