[tool.poetry]
name = "aps-feed"
version = "0.1.0"
description = "Physics Journals Feed Processor with arXiv enrichment"
authors = ["KK <ks.merikanto@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
scipy = "^1.16.1"
feedparser = "^6.0.10"
requests = "^2.32.5"
beautifulsoup4 = "^4.13.5"
pyyaml = "^6.0"
asyncio = "^4.0.0"
flask = "^3.1.2"
html-to-json = "^2.0.0"
mattermostdriver = "^7.3.2"
rapidfuzz = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
